guestbook-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-green
  namespace: guestbook-ns
  labels:
    app: guestbook-green
spec:
  selector:
    matchLabels:
      app: guestbook-green
  replicas: 1
  template:
    metadata:
      labels:
        app: guestbook-green
    spec:
      containers:
      - name: guestbook
        image: tenzai/guestbookgreen
        ports:
          - containerPort: 3000
            name: http-server
---
apiVersion: v1
kind: Service
metadata:
  name: guestbook-green
  namespace: guestbook-ns
  labels:
    app: guestbook-green
spec:
  selector:
    app: guestbook-green
  type: NodePort 
  ports:
    - name: guestbook
      port: 80
      targetPort: 3000
